html structure complete

--- a/index.html
+++ b/index.html
@@ -38,4 +38,28 @@
         <img id="mag-icon" src="search-icon.jpg" alt="magnifying glass logo">
         <img id="mic-icon" src="mic-icon.jpg" alt="microphone logo">
        </div>
+       <footer>
+        <div class="navbar-left">
+            <ul>
+                <li><a  href="https://about.google/?utm_source=google-HR&utm_medium=referral&utm_campaign=hp-footer&fg=1" target="_blank">About</a></li>
+                <li><a href="https://store.google.com/regionpicker" target="_blank">Store</a></li>
+            </ul>
+            </div>
+       </footer>
+       <nav class="navbar" id="footer-nav">
+       <div class="navbar-left">
+        <ul>
+            <li><a  href="https://ads.google.com/home/" target="_blank">Advertising</a></li>
+            <li><a href="https://www.google.com/business/" target="_blank">Business</a></li>
+            <li><a href="https://www.google.com/search/howsearchworks/" target="_blank">How search works</a></li>
+        </ul>
+        </div>
+        <div class="navbar-right">
+            <ul>
+                <li><a href="https://policies.google.com/privacy?hl=en-US" target="_blank"></a>Privacy</li>
+                <li><a href="https://policies.google.com/terms?hl=en-US" target="_blank"></a>Terms</li>
+                <li><a href="https://myaccount.google.com/?pli=1" target="_blank"></a>Settings</li>
+                
+            </ul>
+            </div>
    </body>
