--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        </div>
        <div class="navbar-right">
            <ul>
-               <li><a href="https://www.google.com/intl/hr/gmail/about/# " target="_blank"></a>Gmail</li>
+               <li><a href="https://www.google.com/intl/hr/gmail/about/# " target="_blank">Gmail</a></li>
                <li><a href="https://about.google/intl/en/products/?tab=wh" targer="_blank">
                <img class="icon" src="apps-logo-grid.png" alt="google-apps-icon" title="Google Apps"></a></li>
                <li><a class="login-button" href="https://accounts.google.com/signin/v2/identifier?hl=hr&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank">Sign In</a></li>
@@ -35,17 +35,10 @@
        </div>
        <div>
         <input id="search-text" type="text">
-        <img id="mag-icon" src="search-icon.jpg" alt="magnifying glass logo">
-        <img id="mic-icon" src="mic-icon.jpg" alt="microphone logo">
+        <img id="mag-icon"  class="icon" src="search-icon.jpg" alt="magnifying glass logo">
+        <img id="mic-icon" class="icon" src="mic-icon.jpg" alt="microphone logo">
        </div>
        <footer>
-        <div class="navbar-left">
-            <ul>
-                <li><a  href="https://about.google/?utm_source=google-HR&utm_medium=referral&utm_campaign=hp-footer&fg=1" target="_blank">About</a></li>
-                <li><a href="https://store.google.com/regionpicker" target="_blank">Store</a></li>
-            </ul>
-            </div>
-       </footer>
        <nav class="navbar" id="footer-nav">
        <div class="navbar-left">
         <ul>
@@ -56,10 +49,12 @@
         </div>
         <div class="navbar-right">
             <ul>
-                <li><a href="https://policies.google.com/privacy?hl=en-US" target="_blank"></a>Privacy</li>
-                <li><a href="https://policies.google.com/terms?hl=en-US" target="_blank"></a>Terms</li>
-                <li><a href="https://myaccount.google.com/?pli=1" target="_blank"></a>Settings</li>
+                <li><a href="https://policies.google.com/privacy?hl=en-US" target="_blank">Privacy</a></li>
+                <li><a href="https://policies.google.com/terms?hl=en-US" target="_blank">Terms</a></li>
+                <li><a href="https://myaccount.google.com/?pli=1" target="_blank">Settings</a></li>
                 
             </ul>
             </div>
+            </footer>
    </body>
+</html>
