--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
        <div class="navbar-right">
            <ul>
                <li><a href="https://www.google.com/intl/hr/gmail/about/# " target="_blank">Gmail</a></li>
+               <li><a href="https://www.google.com/imghp?hl=en" target="_blank">Images</a></li>
                <li><a href="https://about.google/intl/en/products/?tab=wh" targer="_blank">
                <img class="icon" src="apps-logo-grid.png" alt="google-apps-icon" title="Google Apps"></a></li>
                <li><a class="login-button" href="https://accounts.google.com/signin/v2/identifier?hl=hr&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank">Sign In</a></li>
@@ -29,15 +30,20 @@
            </div>
 
    </nav>
-   <body>
-       <div>
+   <main>
+       <div class="logo-section">
            <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google-logo">
        </div>
-       <div>
+       <div class="search-box">
         <input id="search-text" type="text">
         <img id="mag-icon"  class="icon" src="search-icon.jpg" alt="magnifying glass logo">
         <img id="mic-icon" class="icon" src="mic-icon.jpg" alt="microphone logo">
        </div>
+    <div class="buttons">
+        <button class="button">Google Search</button>
+        <button class="button">I feel lucky</button>
+       </div>
+       </main>
        <footer>
        <nav class="navbar" id="footer-nav">
        <div class="navbar-left">
@@ -56,5 +62,5 @@
             </ul>
             </div>
             </footer>
-   </body>
+   
 </html>
