--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <li><a href="https://www.google.com/intl/hr/gmail/about/# " target="_blank">Gmail</a></li>
                <li><a href="https://www.google.com/imghp?hl=en" target="_blank">Images</a></li>
                <li><a href="https://about.google/intl/en/products/?tab=wh" targer="_blank">
-               <img class="icon" src="apps-logo-grid.png" alt="google-apps-icon" title="Google Apps"></a></li>
+               <img class="icon" id="apps-icon" src="apps-logo-grid.png" alt="google-apps-icon" title="Google Apps"></a></li>
                <li><a class="login-button" href="https://accounts.google.com/signin/v2/identifier?hl=hr&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank">Sign In</a></li>
 
            </ul>
@@ -34,11 +34,11 @@
        <div class="logo-section">
            <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google-logo">
        </div>
-       <div class="search-box">
+       <div class="search">
         <input id="search-text" type="text">
         <img id="mag-icon"  class="icon" src="search-icon.jpg" alt="magnifying glass logo">
         <img id="mic-icon" class="icon" src="mic-icon.jpg" alt="microphone logo">
-       </div>
+       
     <div class="buttons">
         <button class="button">Google Search</button>
         <button class="button">I feel lucky</button>
