--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
        <div class="logo-section">
            <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google-logo">
        </div>
-       <div class="search">
+       <div class="search-wrapper">
         <input id="search-text" type="text">
         <img id="mag-icon"  class="icon" src="search-icon.jpg" alt="magnifying glass logo">
         <img id="mic-icon" class="icon" src="mic-icon.jpg" alt="microphone logo">
-       
+       </div>
     <div class="buttons">
         <button class="button">Google Search</button>
         <button class="button">I feel lucky</button>
