--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
        </div>
        <div class="search-wrapper">
         <input id="search-text" type="text">
-        <img id="mag-icon"  class="icon" src="search-icon.jpg" alt="magnifying glass logo">
-        <img id="mic-icon" class="icon" src="mic-icon.jpg" alt="microphone logo">
+        <img id="mag-icon"  class="icon" src="mag-icon.png" alt="magnifying glass logo">
+        <img id="mic-icon" class="icon" src="mic-icon.png" alt="microphone logo">
        </div>
     <div class="buttons">
         <button class="button">Google Search</button>
