--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        </div>
     <div class="buttons">
         <button class="button">Google Search</button>
-        <button class="button">I feel lucky</button>
+        <button class="button">I'm feeling lucky</button>
        </div>
        </main>
        <footer>
